# copyast

./: .copyastignore.example  .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  sonar-project.properties
.github/workflows/: ci.yml
scripts/: build-linux.sh  build-windows.ps1
src/app/: main.py
src/app/application/: bootstrap.py  factories.py
src/app/application/commands/: base.py  bulk_delete_cmd.py  bulk_import_cmd.py  delete_cmd.py  export_cmd.py  import_cmd.py  scan_delete_cmd.py  sync_git_cmd.py
src/app/domain/: models.py  services.py
src/app/infrastructure/: config.py
src/app/infrastructure/adapter/: copyast_adapter.py  file_adapter.py  git_adapter.py
src/app/ports/: ports.py
tests/: test_copyast_adapter.py  test_git_adapter.py  test_ignore_adapter.py  test_multi_root.py  test_service_upsert.py  test_smoke.py
