[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "copyast"
version = "1.0.0"
description = "CLI app to export folder files into a txt bundle and sync changes via git"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  {name = "Yunomi Xavia"}
]

[project.scripts]
copyast = "app.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
